src/objects/TransferOwner__c.object
<CustomObject>
    <description>Custom object holds all transfer records</description>
    <fields>
        <fullName>Activities__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Transfer all open activities.</inlineHelpText>
        <label>Activities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Owner__c</fullName>
        <inlineHelpText>The new owner of activities/opportunities.</inlineHelpText>
        <label>New Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TransferOwnersNewOwner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>No_of_Events_Transfered__c</fullName>
        <inlineHelpText>The number of events that were transferred.</inlineHelpText>
        <label>No. of Events Transferred</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Opportunities_Transfered__c</fullName>
        <inlineHelpText>The number of opportunities that were transferred.</inlineHelpText>
        <label>No. of Opportunities Transferred</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Tasks_Transfered__c</fullName>
        <inlineHelpText>The number of tasks that were transferred.</inlineHelpText>
        <label>No. of Tasks Transferred</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunities__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Transfer all open opportunities.</inlineHelpText>
        <label>Opportunities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Owner__c</fullName>
        <inlineHelpText>The original owner of activities/opportunities.</inlineHelpText>
        <label>Original Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TransferOwnersOldOwner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Select_All_Open_Records__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Select All Open Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Transfer Owner</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Original_Owner__c</columns>
        <columns>New_Owner__c</columns>
        <columns>Activities__c</columns>
        <columns>Opportunities__c</columns>
        <columns>No_of_Tasks_Transfered__c</columns>
        <columns>No_of_Events_Transfered__c</columns>
        <columns>No_of_Opportunities_Transfered__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TO-{0000}</displayFormat>
        <label>Transfer Owner Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transfer Owners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>